--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <div class="card">
           <div class="top">
             <div class="bgc-circle"></div>
-            <img src="adidas.png" alt="snicker" />
+            <img id="img" src="adidas.png" alt="snicker" />
           </div>
 
           <div class="mid">
-            <h1>Adidas ZX</h1>
-            <p>FUTURE-READY TRAINERS WITH WRAPPED BOOST FOR EXCEPTION COMFORT.</p>
-            <ul>
+            <h1 class="title">Adidas ZX</h1>
+            <p class="paragraph">FUTURE-READY TRAINERS WITH WRAPPED BOOST FOR EXCEPTION COMFORT.</p>
+            <ul class="size">
               <li>39</li>
               <li>40</li>
               <li>42</li>
@@ -45,13 +45,24 @@
           </div>
 
           <div class="bot">
-            <button>Purchase</button>
+            <button class="purchase">Purchase</button>
           </div>
         </div>
       </div>
-
-      <footer>Mikołaj Celka</footer>
+      <div class="info">
+        <div class="type">ZX SHOES</div>
+        ZX has never felt more satisfying. This chapter of ZX introduces ZXience through new levels of squeeze and
+        squishiness. Wrapped in colors and gradients, these ZX sneakers look as good as they feel.
+      </div>
     </div>
+
+    <nav>
+      <ul>
+        <li><i class="fas fa-home"></i> Home</li>
+        <li><i class="fas fa-user-alt"></i> About</li>
+        <li><i class="fas fa-envelope"></i> Contact</li>
+      </ul>
+    </nav>
 
     <script src="script.js"></script>
   </body>
