--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
         <div class="card">
           <div class="top">
             <div class="bgc-circle"></div>
-            <img id="img" src="adidas.png" alt="snicker" />
+            <img id="img" src="s.png" alt="snicker" />
           </div>
 
           <div class="mid">
-            <h1 class="title">Adidas ZX</h1>
-            <p class="paragraph">FUTURE-READY TRAINERS WITH WRAPPED BOOST FOR EXCEPTION COMFORT.</p>
+            <h1 class="title">Nike Air Zoom Wildhorse</h1>
+            <p class="paragraph">Trail running shoe designed for neutral runners</p>
             <ul class="size">
               <li>39</li>
               <li>40</li>
@@ -51,8 +51,8 @@
       </div>
       <div class="info">
         <div class="type">ZX SHOES</div>
-        ZX has never felt more satisfying. This chapter of ZX introduces ZXience through new levels of squeeze and
-        squishiness. Wrapped in colors and gradients, these ZX sneakers look as good as they feel.
+        Energetic trainers from NIKE. The upper part is produced from Fabric - Fabric, Material - High-quality material.
+        Comfort is provided by the insoles made of textile. The sole is produced from high-quality material.
       </div>
     </div>
 
