--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Adidas ZX</title>
+    <title>Nike Air Zoom Wildhorse</title>
   </head>
 
   <body>
@@ -51,8 +51,8 @@
       </div>
       <div class="info">
         <div class="type">ZX SHOES</div>
-        Energetic trainers from NIKE. The upper part is produced from Fabric - Fabric, Material - High-quality material.
-        Comfort is provided by the insoles made of textile. The sole is produced from high-quality material.
+        Energetic trainers from NIKE. Comfort is provided by the insoles made of textile. The sole is produced from
+        high-quality material.
       </div>
     </div>
 
